--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <html>
 <body> 
- 
- 
- 
-&nbsp;__		&nbsp;__		&nbsp;________	&nbsp;&nbsp;&nbsp;&nbsp;________	&nbsp;&nbsp;&nbsp;_______&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;__		__	</br>
-/\&nbsp;\&nbsp;&nbsp;&nbsp;&nbsp;/\&nbsp;\&nbsp;&nbsp;&nbsp;/\&nbsp;&nbsp;______&nbsp;\&nbsp;&nbsp;&nbsp;/\&nbsp;&nbsp;______&nbsp;\&nbsp;&nbsp;&nbsp;/\&nbsp;&nbsp;_____/&nbsp;&nbsp;&nbsp;/\&nbsp;\&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;/\&nbsp;\&nbsp;</br>
-\&nbsp;\&nbsp;\&nbsp;__\_\&nbsp;\&nbsp;&nbsp;\&nbsp;\&nbsp;\___\_\&nbsp;\&nbsp;&nbsp;\&nbsp;\&nbsp;\___\_\_\&nbsp;&nbsp;\&nbsp;\&nbsp;\______&nbsp;&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;__\_\&nbsp;\&nbsp;</br>
-&nbsp;\&nbsp;\&nbsp;'&nbsp;___&nbsp;'&nbsp;\&nbsp;&nbsp;\&nbsp;\&nbsp;'_____\&nbsp;\&nbsp;&nbsp;\&nbsp;\&nbsp;'____<<_&nbsp;&nbsp;&nbsp;\&nbsp;\&nbsp;'_____&nbsp;\&nbsp;&nbsp;\&nbsp;\&nbsp;'&nbsp;___&nbsp;'&nbsp;\&nbsp;</br>
-&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;___\_\&nbsp;\&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;&nbsp;&nbsp;\&nbsp;\&nbsp;\&nbsp;</br>
-&nbsp;&nbsp;&nbsp;\&nbsp;\_\&nbsp;&nbsp;&nbsp;\&nbsp;\_\&nbsp;&nbsp;\&nbsp;\_\&nbsp;&nbsp;&nbsp;\&nbsp;\_\&nbsp;&nbsp;\&nbsp;\_\&nbsp;&nbsp;&nbsp;\&nbsp;\_\&nbsp;&nbsp;&nbsp;&nbsp;/\_______\&nbsp;&nbsp;\&nbsp;\_\&nbsp;&nbsp;&nbsp;\&nbsp;\_\&nbsp;</br>
-&nbsp;&nbsp;&nbsp;&nbsp;\/_/&nbsp;&nbsp;&nbsp;&nbsp;\/_/&nbsp;&nbsp;&nbsp;\/_/&nbsp;&nbsp;&nbsp;&nbsp;\/_/&nbsp;&nbsp;&nbsp;\/_/&nbsp;&nbsp;&nbsp;&nbsp;\/_/&nbsp;&nbsp;&nbsp;&nbsp;\/_______/&nbsp;&nbsp;&nbsp;\/_/&nbsp;&nbsp;&nbsp;&nbsp;\/_/&nbsp;</br>
+<pre>
+  __	 __	 ________       ________       _______      __	    __	
+ /\ \    /\ \   /\  ______ \   /\  ______ \   /\  _____/    /\ \    /\ \ 
+ \ \ \ __\_\ \  \ \ \___\_\ \  \ \ \___\_\_\  \ \ \______   \ \ \ __\_\ \ 
+  \ \ ' ___ ' \  \ \ '_____\ \  \ \ '____<<_   \ \ '_____ \  \ \ ' ___ ' \
+   \ \ \   \ \ \  \ \ \   \ \ \  \ \ \   \ \ \  \/  ___\_\ \  \ \ \   \ \ \
+    \ \_\   \ \_\  \ \_\   \ \_\  \ \_\   \ \_\    /\_______\  \ \_\   \ \_\
+     \/_/    \/_/   \/_/    \/_/   \/_/    \/_/    \/_______/   \/_/    \/_/
 	
 (_'_______________________________________________________________________________'_)
 (_.———————————————————————————————————————————————————————————————————————————————._)
+</pre>
 
 </body>
 </html>
